--- a/android-native/ThrillCity/app/build.gradle
+++ b/android-native/ThrillCity/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "24.0.1"
 
     defaultConfig {
-        applicationId "thrillcity.com.thrillcity"
+        applicationId "com.android.mobile.thrillcity"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
