--- a/android-native/ThrillCity/app/src/main/AndroidManifest.xml
+++ b/android-native/ThrillCity/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="thrillcity.com.thrillcity">
+    package="com.android.mobile.thrillcity">
 
     <application
         android:allowBackup="true"
